# serializer version: 1
# name: TestTrajectorySetT0Direct.test_direct_scalar[datetime]
  shape: (60, 5)
  ┌─────┬─────────────────────┬───────────────────────┬───────────────────────┬──────────────────────┐
  │ id  ┆ _T0_                ┆ intervals_T0_NEAREST_ ┆ events_T0_NEAREST_RAN ┆ states_T0_NEAREST_RA │
  │ --- ┆ ---                 ┆ RANK_                 ┆ K_                    ┆ NK_                  │
  │ i64 ┆ datetime[μs]        ┆ ---                   ┆ ---                   ┆ ---                  │
  │     ┆                     ┆ u32                   ┆ u32                   ┆ u32                  │
  ╞═════╪═════════════════════╪═══════════════════════╪═══════════════════════╪══════════════════════╡
  │ 1   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 2   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 3   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 4   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 5   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ …   ┆ …                   ┆ …                     ┆ …                     ┆ …                    │
  │ 56  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 57  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 58  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 59  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 60  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  └─────┴─────────────────────┴───────────────────────┴───────────────────────┴──────────────────────┘
# ---
# name: TestTrajectorySetT0Direct.test_direct_scalar[timestep]
  shape: (60, 5)
  ┌─────┬──────┬────────────────────────────┬─────────────────────────┬─────────────────────────┐
  │ id  ┆ _T0_ ┆ intervals_T0_NEAREST_RANK_ ┆ events_T0_NEAREST_RANK_ ┆ states_T0_NEAREST_RANK_ │
  │ --- ┆ ---  ┆ ---                        ┆ ---                     ┆ ---                     │
  │ i64 ┆ f64  ┆ u32                        ┆ u32                     ┆ u32                     │
  ╞═════╪══════╪════════════════════════════╪═════════════════════════╪═════════════════════════╡
  │ 1   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 2   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 3   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 4   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 5   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ …   ┆ …    ┆ …                          ┆ …                       ┆ …                       │
  │ 56  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 57  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 58  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 59  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 60  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  └─────┴──────┴────────────────────────────┴─────────────────────────┴─────────────────────────┘
# ---
# name: TestTrajectorySetT0Feature.test_feature_strategy[datetime]
  shape: (60, 5)
  ┌─────┬─────────────────────┬───────────────────────┬───────────────────────┬──────────────────────┐
  │ id  ┆ _T0_                ┆ intervals_T0_NEAREST_ ┆ events_T0_NEAREST_RAN ┆ states_T0_NEAREST_RA │
  │ --- ┆ ---                 ┆ RANK_                 ┆ K_                    ┆ NK_                  │
  │ i64 ┆ datetime[μs]        ┆ ---                   ┆ ---                   ┆ ---                  │
  │     ┆                     ┆ u32                   ┆ u32                   ┆ u32                  │
  ╞═════╪═════════════════════╪═══════════════════════╪═══════════════════════╪══════════════════════╡
  │ 1   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 2   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 3   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 4   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 5   ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ …   ┆ …                   ┆ …                     ┆ …                     ┆ …                    │
  │ 56  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 57  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 58  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 59  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 60  ┆ 2000-06-01 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  └─────┴─────────────────────┴───────────────────────┴───────────────────────┴──────────────────────┘
# ---
# name: TestTrajectorySetT0Feature.test_feature_strategy[timestep]
  shape: (60, 5)
  ┌─────┬──────┬────────────────────────────┬─────────────────────────┬─────────────────────────┐
  │ id  ┆ _T0_ ┆ intervals_T0_NEAREST_RANK_ ┆ events_T0_NEAREST_RANK_ ┆ states_T0_NEAREST_RANK_ │
  │ --- ┆ ---  ┆ ---                        ┆ ---                     ┆ ---                     │
  │ i64 ┆ f64  ┆ u32                        ┆ u32                     ┆ u32                     │
  ╞═════╪══════╪════════════════════════════╪═════════════════════════╪═════════════════════════╡
  │ 1   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 2   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 3   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 4   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 5   ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ …   ┆ …    ┆ …                          ┆ …                       ┆ …                       │
  │ 56  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 57  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 58  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 59  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 60  ┆ 42.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  └─────┴──────┴────────────────────────────┴─────────────────────────┴─────────────────────────┘
# ---
# name: TestTrajectorySetT0Position.test_position_last[datetime]
  shape: (60, 5)
  ┌─────┬─────────────────────┬───────────────────────┬───────────────────────┬──────────────────────┐
  │ id  ┆ _T0_                ┆ intervals_T0_NEAREST_ ┆ events_T0_NEAREST_RAN ┆ states_T0_NEAREST_RA │
  │ --- ┆ ---                 ┆ RANK_                 ┆ K_                    ┆ NK_                  │
  │ i64 ┆ datetime[μs]        ┆ ---                   ┆ ---                   ┆ ---                  │
  │     ┆                     ┆ u32                   ┆ u32                   ┆ u32                  │
  ╞═════╪═════════════════════╪═══════════════════════╪═══════════════════════╪══════════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                     ┆ 7                     ┆ 7                    │
  │ 2   ┆ 2000-08-26 00:00:00 ┆ 5                     ┆ 5                     ┆ 5                    │
  │ 3   ┆ 2000-11-08 00:00:00 ┆ 5                     ┆ 5                     ┆ 5                    │
  │ 4   ┆ 2001-03-12 00:00:00 ┆ 3                     ┆ 3                     ┆ 3                    │
  │ 5   ┆ 2000-12-13 00:00:00 ┆ 3                     ┆ 3                     ┆ 3                    │
  │ …   ┆ …                   ┆ …                     ┆ …                     ┆ …                    │
  │ 56  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 57  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 58  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 59  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 60  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  └─────┴─────────────────────┴───────────────────────┴───────────────────────┴──────────────────────┘
# ---
# name: TestTrajectorySetT0Position.test_position_last[timestep]
  shape: (60, 5)
  ┌─────┬───────┬────────────────────────────┬─────────────────────────┬─────────────────────────┐
  │ id  ┆ _T0_  ┆ intervals_T0_NEAREST_RANK_ ┆ events_T0_NEAREST_RANK_ ┆ states_T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---                        ┆ ---                     ┆ ---                     │
  │ i64 ┆ f64   ┆ u32                        ┆ u32                     ┆ u32                     │
  ╞═════╪═══════╪════════════════════════════╪═════════════════════════╪═════════════════════════╡
  │ 1   ┆ 373.0 ┆ 7                          ┆ 7                       ┆ 7                       │
  │ 2   ┆ 238.0 ┆ 5                          ┆ 5                       ┆ 5                       │
  │ 3   ┆ 312.0 ┆ 5                          ┆ 5                       ┆ 5                       │
  │ 4   ┆ 436.0 ┆ 3                          ┆ 3                       ┆ 3                       │
  │ 5   ┆ 347.0 ┆ 3                          ┆ 3                       ┆ 3                       │
  │ …   ┆ …     ┆ …                          ┆ …                       ┆ …                       │
  │ 56  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 57  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 58  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 59  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 60  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  └─────┴───────┴────────────────────────────┴─────────────────────────┴─────────────────────────┘
# ---
# name: TestTrajectorySetT0Position.test_position_zero[datetime]
  shape: (60, 5)
  ┌─────┬─────────────────────┬───────────────────────┬───────────────────────┬──────────────────────┐
  │ id  ┆ _T0_                ┆ intervals_T0_NEAREST_ ┆ events_T0_NEAREST_RAN ┆ states_T0_NEAREST_RA │
  │ --- ┆ ---                 ┆ RANK_                 ┆ K_                    ┆ NK_                  │
  │ i64 ┆ datetime[μs]        ┆ ---                   ┆ ---                   ┆ ---                  │
  │     ┆                     ┆ u32                   ┆ u32                   ┆ u32                  │
  ╞═════╪═════════════════════╪═══════════════════════╪═══════════════════════╪══════════════════════╡
  │ 1   ┆ 2000-10-05 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 2   ┆ 2000-05-20 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 3   ┆ 2000-06-17 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 4   ┆ 2000-12-29 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ 5   ┆ 2000-10-20 00:00:00 ┆ 0                     ┆ 0                     ┆ 0                    │
  │ …   ┆ …                   ┆ …                     ┆ …                     ┆ …                    │
  │ 56  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 57  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 58  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 59  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 60  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  └─────┴─────────────────────┴───────────────────────┴───────────────────────┴──────────────────────┘
# ---
# name: TestTrajectorySetT0Position.test_position_zero[timestep]
  shape: (60, 5)
  ┌─────┬───────┬────────────────────────────┬─────────────────────────┬─────────────────────────┐
  │ id  ┆ _T0_  ┆ intervals_T0_NEAREST_RANK_ ┆ events_T0_NEAREST_RANK_ ┆ states_T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---                        ┆ ---                     ┆ ---                     │
  │ i64 ┆ f64   ┆ u32                        ┆ u32                     ┆ u32                     │
  ╞═════╪═══════╪════════════════════════════╪═════════════════════════╪═════════════════════════╡
  │ 1   ┆ 278.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 2   ┆ 140.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 3   ┆ 168.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 4   ┆ 363.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ 5   ┆ 293.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ …   ┆ …     ┆ …                          ┆ …                       ┆ …                       │
  │ 56  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 57  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 58  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 59  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 60  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  └─────┴───────┴────────────────────────────┴─────────────────────────┴─────────────────────────┘
# ---
# name: TestTrajectorySetT0Query.test_query_use_first[datetime]
  shape: (60, 5)
  ┌─────┬─────────────────────┬───────────────────────┬───────────────────────┬──────────────────────┐
  │ id  ┆ _T0_                ┆ intervals_T0_NEAREST_ ┆ events_T0_NEAREST_RAN ┆ states_T0_NEAREST_RA │
  │ --- ┆ ---                 ┆ RANK_                 ┆ K_                    ┆ NK_                  │
  │ i64 ┆ datetime[μs]        ┆ ---                   ┆ ---                   ┆ ---                  │
  │     ┆                     ┆ u32                   ┆ u32                   ┆ u32                  │
  ╞═════╪═════════════════════╪═══════════════════════╪═══════════════════════╪══════════════════════╡
  │ 1   ┆ 2000-10-25 00:00:00 ┆ 2                     ┆ 2                     ┆ 2                    │
  │ 2   ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 3   ┆ 2000-09-30 00:00:00 ┆ 3                     ┆ 3                     ┆ 3                    │
  │ 4   ┆ 2001-02-27 00:00:00 ┆ 2                     ┆ 2                     ┆ 2                    │
  │ 5   ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ …   ┆ …                   ┆ …                     ┆ …                     ┆ …                    │
  │ 56  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 57  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 58  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 59  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 60  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  └─────┴─────────────────────┴───────────────────────┴───────────────────────┴──────────────────────┘
# ---
# name: TestTrajectorySetT0Query.test_query_use_first[timestep]
  shape: (60, 5)
  ┌─────┬───────┬────────────────────────────┬─────────────────────────┬─────────────────────────┐
  │ id  ┆ _T0_  ┆ intervals_T0_NEAREST_RANK_ ┆ events_T0_NEAREST_RANK_ ┆ states_T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---                        ┆ ---                     ┆ ---                     │
  │ i64 ┆ f64   ┆ u32                        ┆ u32                     ┆ u32                     │
  ╞═════╪═══════╪════════════════════════════╪═════════════════════════╪═════════════════════════╡
  │ 1   ┆ 344.0 ┆ 6                          ┆ 6                       ┆ 6                       │
  │ 2   ┆ 168.0 ┆ 1                          ┆ 1                       ┆ 1                       │
  │ 3   ┆ 210.0 ┆ 1                          ┆ 1                       ┆ 1                       │
  │ 4   ┆ 395.0 ┆ 1                          ┆ 1                       ┆ 1                       │
  │ 5   ┆ 293.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ …   ┆ …     ┆ …                          ┆ …                       ┆ …                       │
  │ 56  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 57  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 58  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 59  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 60  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  └─────┴───────┴────────────────────────────┴─────────────────────────┴─────────────────────────┘
# ---
# name: TestTrajectorySetT0Query.test_query_use_last[datetime]
  shape: (60, 5)
  ┌─────┬─────────────────────┬───────────────────────┬───────────────────────┬──────────────────────┐
  │ id  ┆ _T0_                ┆ intervals_T0_NEAREST_ ┆ events_T0_NEAREST_RAN ┆ states_T0_NEAREST_RA │
  │ --- ┆ ---                 ┆ RANK_                 ┆ K_                    ┆ NK_                  │
  │ i64 ┆ datetime[μs]        ┆ ---                   ┆ ---                   ┆ ---                  │
  │     ┆                     ┆ u32                   ┆ u32                   ┆ u32                  │
  ╞═════╪═════════════════════╪═══════════════════════╪═══════════════════════╪══════════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                     ┆ 7                     ┆ 7                    │
  │ 2   ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 3   ┆ 2000-09-30 00:00:00 ┆ 3                     ┆ 3                     ┆ 3                    │
  │ 4   ┆ 2001-02-27 00:00:00 ┆ 2                     ┆ 2                     ┆ 2                    │
  │ 5   ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ …   ┆ …                   ┆ …                     ┆ …                     ┆ …                    │
  │ 56  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 57  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 58  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 59  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 60  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  └─────┴─────────────────────┴───────────────────────┴───────────────────────┴──────────────────────┘
# ---
# name: TestTrajectorySetT0Query.test_query_use_last[timestep]
  shape: (60, 5)
  ┌─────┬───────┬────────────────────────────┬─────────────────────────┬─────────────────────────┐
  │ id  ┆ _T0_  ┆ intervals_T0_NEAREST_RANK_ ┆ events_T0_NEAREST_RANK_ ┆ states_T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---                        ┆ ---                     ┆ ---                     │
  │ i64 ┆ f64   ┆ u32                        ┆ u32                     ┆ u32                     │
  ╞═════╪═══════╪════════════════════════════╪═════════════════════════╪═════════════════════════╡
  │ 1   ┆ 344.0 ┆ 6                          ┆ 6                       ┆ 6                       │
  │ 2   ┆ 172.0 ┆ 2                          ┆ 2                       ┆ 2                       │
  │ 3   ┆ 210.0 ┆ 1                          ┆ 1                       ┆ 1                       │
  │ 4   ┆ 395.0 ┆ 1                          ┆ 1                       ┆ 1                       │
  │ 5   ┆ 293.0 ┆ 0                          ┆ 0                       ┆ 0                       │
  │ …   ┆ …     ┆ …                          ┆ …                       ┆ …                       │
  │ 56  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 57  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 58  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 59  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 60  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  └─────┴───────┴────────────────────────────┴─────────────────────────┴─────────────────────────┘
# ---
# name: TestTrajectoryT0Override.test_second_set_t0_replaces[datetime]
  shape: (60, 5)
  ┌─────┬─────────────────────┬───────────────────────┬───────────────────────┬──────────────────────┐
  │ id  ┆ _T0_                ┆ intervals_T0_NEAREST_ ┆ events_T0_NEAREST_RAN ┆ states_T0_NEAREST_RA │
  │ --- ┆ ---                 ┆ RANK_                 ┆ K_                    ┆ NK_                  │
  │ i64 ┆ datetime[μs]        ┆ ---                   ┆ ---                   ┆ ---                  │
  │     ┆                     ┆ u32                   ┆ u32                   ┆ u32                  │
  ╞═════╪═════════════════════╪═══════════════════════╪═══════════════════════╪══════════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                     ┆ 7                     ┆ 7                    │
  │ 2   ┆ 2000-08-26 00:00:00 ┆ 5                     ┆ 5                     ┆ 5                    │
  │ 3   ┆ 2000-11-08 00:00:00 ┆ 5                     ┆ 5                     ┆ 5                    │
  │ 4   ┆ 2001-03-12 00:00:00 ┆ 3                     ┆ 3                     ┆ 3                    │
  │ 5   ┆ 2000-12-13 00:00:00 ┆ 3                     ┆ 3                     ┆ 3                    │
  │ …   ┆ …                   ┆ …                     ┆ …                     ┆ …                    │
  │ 56  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 57  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 58  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 59  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  │ 60  ┆ null                ┆ null                  ┆ null                  ┆ null                 │
  └─────┴─────────────────────┴───────────────────────┴───────────────────────┴──────────────────────┘
# ---
# name: TestTrajectoryT0Override.test_second_set_t0_replaces[timestep]
  shape: (60, 5)
  ┌─────┬───────┬────────────────────────────┬─────────────────────────┬─────────────────────────┐
  │ id  ┆ _T0_  ┆ intervals_T0_NEAREST_RANK_ ┆ events_T0_NEAREST_RANK_ ┆ states_T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---                        ┆ ---                     ┆ ---                     │
  │ i64 ┆ f64   ┆ u32                        ┆ u32                     ┆ u32                     │
  ╞═════╪═══════╪════════════════════════════╪═════════════════════════╪═════════════════════════╡
  │ 1   ┆ 373.0 ┆ 7                          ┆ 7                       ┆ 7                       │
  │ 2   ┆ 238.0 ┆ 5                          ┆ 5                       ┆ 5                       │
  │ 3   ┆ 312.0 ┆ 5                          ┆ 5                       ┆ 5                       │
  │ 4   ┆ 436.0 ┆ 3                          ┆ 3                       ┆ 3                       │
  │ 5   ┆ 347.0 ┆ 3                          ┆ 3                       ┆ 3                       │
  │ …   ┆ …     ┆ …                          ┆ …                       ┆ …                       │
  │ 56  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 57  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 58  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 59  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  │ 60  ┆ null  ┆ null                       ┆ null                    ┆ null                    │
  └─────┴───────┴────────────────────────────┴─────────────────────────┴─────────────────────────┘
# ---
